# z4-templates

./: Cargo.toml  README.md
contracts/solidity/: RoomMarket.sol  SimpleGame.sol
custom/: .env-template  .gitignore  Cargo.toml  README.md
custom/src/: handler.rs  main.rs
risc0/: .gitignore  Cargo.toml  README.md
risc0/host/: Cargo.toml
risc0/host/src/: lib.rs
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: main.rs
