[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0", features = ["prove"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ethers-core = { version = "2.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
bincode = "1.3"
